# self-coaching

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  SKILL.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml  pipeline-integration.yml
configs/: coach.example.yaml  self-coaching.example.yaml  skill.example.yaml
docs/: ARCHITECTURE.md  CHANGELOG-skills.md  README.md  RUNBOOK.md  deploy-t1-skill-pack.md  integration-plan.md  pipeline.md  production-deployment.md  progress.md  roadmap.md
docs/design/: README.md  architecture.md  coach_mode.md  (+6 more)
experience/: ERROR.md  EXPERIMENT_LOG.md  LEARNINGS.md  RUN_SUMMARY.json
mock-services/: README.md  __init__.py  client.py  mock_aerl.py  mock_agent_registry.py  mock_agentevals.py  mock_self_coaching.py  mock_self_learning.py  mock_self_play.py  mock_self_questioning.py  plugin_mock.py  production_readiness.py  proxyutil.py  self_coaching_loop.py
references/: hooks-setup.md
scenarios/: clock_loop.json  demo.agentevals.env.example  demo.cli-train.env.example  demo.env.example  demo.evolution-loop.env.example  demo.live.env.example  demo.pipeline.env.example  dense_failures.json  evolution_loop.json  evolution_loop_live.json  full_loop.json  full_loop_live.json  rollout-grpo.example.json  sparse_failures.json
scripts/: DEV_WORKFLOW.md  activator.sh  agentevals_live_smoke.py  cli_train_smoke.py  clock_loop_smoke.py  curate_data.py  doctor.sh  evolution_loop_clock_smoke.py  export-integration-snapshots.sh  full_loop_live_smoke.py  gitignore.dev  hook-experiment.sh  hook-inject-errors.sh  hook-inject-learnings.sh  init-experience.sh  install-skill-pack.sh  lib-trainer-repo.sh  meta_eval_coach.py  migrate_terminology.py  mock-aerl-extended-smoke.sh  mock-aerl-smoke.sh  mock-agentevals-smoke.sh  mock-coach-demo.sh  mock-facade-run-all.sh  mock-production-readiness.sh  mock-run-all.sh  mock-self-coaching-demo.ps1  mock-self-coaching-demo.sh  mock-self-learning-smoke.sh  mock-self-play-smoke.sh  mock-self-questioning-smoke.sh  mock-stack-up.sh  mock_self_coaching_demo.py  pipeline_self_play_smoke.py  pipeline_self_questioning_smoke.py  preflight.sh  promote-allowlist.txt  promote-denylist.txt  promote-to-main.sh  promote-to-public.sh  (+6 more)
self-coaching-evaluation/: SKILL.md
self-coaching-self-learning/: SKILL.md
self-coaching-self-play/: SKILL.md
self-coaching-training/: SKILL.md
services/: SELF_QUESTIONING_SERVICE_API.md  __init__.py  _paths.py
services/LoRA/db_bridge/: Dockerfile  README.md  __init__.py  codec.py  db.py  metrics.py  pyproject.toml  remote_shell.py  run_shell_runner.py  schema.sql
services/LoRA/db_bridge/scripts/: probe_connectivity.py
services/LoRA/db_bridge/tests/: _fakes.py  conftest.py  test_config.py  test_entrypoints.py  test_executor.py  test_hardening.py  test_integration_e2e.py  test_leagent_channels.py  test_remote_shell.py  test_schema.py
tests/: conftest.py  test_aerl_adapter.py  test_aerl_mock_extended.py  test_agent_coach_bridge.py  test_agentevals_adapter.py  test_agentevals_mapping.py  test_cli_train_adapter.py  test_cli_train_transport.py  test_client_auth.py  test_client_transports.py  test_clock_env_restore.py  test_clock_loop_smoke.py  test_coach_registry.py  test_coach_service.py  test_coach_tools.py  test_composite_client.py  test_curate_data.py  test_demo_mock_http.py  test_holdout_engine.py  test_holdout_timeout.py  test_integration_facade.py  test_loop_completeness.py  test_loop_driver_skeleton.py  test_loop_e_path.py  test_loop_env.py  test_loop_self_play_sparse.py  test_loop_self_questioning_sparse.py  test_loop_t_path.py  test_meta_eval.py  test_mock_aerl.py  test_mock_agent_registry.py  test_mock_agentevals.py  test_mock_self_coaching.py  test_mock_self_coaching_demo.sh  test_mock_self_learning.py  test_mock_self_learning_evolve.py  test_mock_self_play.py  test_mock_self_questioning.py  test_mock_service_http.py  test_orchestrator.py  (+16 more)
tools/: loop_completeness.py
upstream/: README.md
(+332 files in other folders)
