[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-coaching"
version = "0.3.1"
description = "Portable, agent-agnostic evolution platform — self-coaching skill pack with mock services for end-to-end validation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Self-Coaching Skill Pack" }
]

# Mock-mode is stdlib-only. Real-API mode adds httpx + pydantic.
dependencies = []

[project.optional-dependencies]
# install with: pip install -e ".[real-api]"
real-api = [
  "httpx>=0.27",
  "pydantic>=2.7",
]
# install with: pip install -e ".[dev]"
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Miya-Liu/self-coaching"
Plan = "https://github.com/Miya-Liu/self-coaching/blob/main/docs/project/self-coaching-demo-pipeline-plan.md"

[project.scripts]
self-coaching-demo = "self_coaching.demo:main"

[tool.setuptools]
package-dir = { "self_coaching" = "modes/self-coaching" }
packages = [
  "self_coaching",
  "services",
  "services.adapters",
  "services.orchestrator",
]
