[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-coaching"
version = "0.3.1"
description = "Portable, agent-agnostic evolution platform — self-coaching skill pack with mock services for end-to-end validation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Self-Coaching Skill Pack" }
]

# Mock-mode is stdlib-only. Real-API mode adds httpx + pydantic.
dependencies = []

[project.optional-dependencies]
# install with: pip install -e ".[real-api]"
real-api = [
  "httpx>=0.27",
  "pydantic>=2.7",
]
# install with: pip install -e ".[dev]"
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]
# install with: pip install -e ".[coach]"
coach = [
  "websockets>=12",
  "pyyaml>=6",
]
# install with: pip install -e ".[supabase]"
supabase = [
  "supabase>=2.0",
]

[project.urls]
Homepage = "https://github.com/Miya-Liu/self-coaching"
Plan = "https://github.com/Miya-Liu/self-coaching/blob/main/docs/project/self-coaching-demo-pipeline-plan.md"

[project.scripts]
self-coaching-demo = "self_coaching.demo:main"
coach-serve = "coach.service:main"
coach-clock = "coach.clock:main"

[tool.setuptools]
package-dir = { "self_coaching" = "modes/self-coaching", "mock_services" = "mock-services", "coach" = "modes/coach" }
packages = [
  "self_coaching",
  "mock_services",
  "coach",
  "services",
  "services.adapters",
  "services.orchestrator",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
# Many adapters delegate to untyped client._request() → Any; suppress until clients are typed
warn_return_any = false

[[tool.mypy.overrides]]
module = ["services.*"]
disallow_untyped_defs = true
