[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "db-bridge"
version = "0.1.0"
description = "Supabase-as-springboard RPC bridge between le-agent and AReaL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "supabase>=2.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
crypto = ["cryptography>=42"]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools]
packages = ["db_bridge"]
package-dir = { "db_bridge" = "." }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# pytest-rerunfailures in the shared venv fails to import pkg_resources; the
# bridge does not need it.
addopts = "-p no:rerunfailures"
filterwarnings = ["ignore::DeprecationWarning"]
